# robutts

./: CMakeLists.txt  Makefile  README.md  todo.md
assets/: a.out  back.ppm  back.tga  back2.tga  back3.tga  fshader.glsl  i_base.tga  i_bomb.tga  i_bomb_act.tga  i_life.tga  i_score.ppm  i_score.tga  nimbus20r.agefnt  nimbus20r.tga  rmask.ppm  robot.ppm  robot.tga  vshader.glsl
assets/exp/: 026.tga  032.tga  034.tga  036.tga  037.tga  041.tga  044.tga  046.tga  1.tga  2.tga  3.tga  4.tga  5.tga  final.tga
docs/: Documentation.org  Listing.tex  back.tga  rules.md
include/: assets.h  audio.h  font.h  item.h  librobutts.h  mat3.h  mat4.h  mgl.h  process.h  robot.h  robutts.h  scene.h  shaders.h  sprite.h  texture.h  vec2.h  vec3.h  vec4.h
src/: CMakeLists.txt  CMakeLists.txt~  a.out  age_font.c  assets_manager.c  audioalsa.c  audiodummy.c  audioopenal.c  audiopulseaudio.c  bf.c  compile_commands.json  f_rvisu.glsl  forward  forward.bf  forward_bot.c  fs.c  heavy  heavy_human.c  human_bot.c  items.c  librobutts.c  mat3.c  mat4.c  mgl.c  os.c  os.s  remote_bclient.c  remote_bserver.c  remote_client.c  remote_client.c~  remote_server.c  remote_server.c~  res.S  robot.c  robutt.c  scene.c  shader.c  slog  sprite.c  switch.c  (+8 more)
