CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if (COMMAND cmake_policy)
	cmake_policy (SET CMP0003 NEW)
endif (COMMAND cmake_policy)

PROJECT (robutts)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11 -g -Wall -Wextra -Werror")

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(GL REQUIRED gl)

SET(AUDIO_BACKEND "dummy")

if (ENABLE_AUDIO)
  PKG_SEARCH_MODULE(OPENAL openal)
  PKG_SEARCH_MODULE(FREEALUT freealut)
  PKG_SEARCH_MODULE(PULSE libpulse)
  if (OPENAL_FOUND AND FREEALUT_FOUND)
	SET(AUDIO_BACKEND "openal")
	SET(AUDIO_LIBRARIES ${OPENAL_LIBRARIES} ${FREEALUT_LIBRARIES})
	SET(AUDIO_INCLUDE_DIRS ${OPENAL_INCLUDE_DIRS} ${FREEALUT_INCLUDE_DIRS})
  endif()
  if (PULSE_FOUND)
	SET(AUDIO_BACKEND "pulseaudio")
	SET(AUDIO_LIBRARIES ${PULSE_LIBRARIES})
	SET(AUDIO_INCLUDE_DIRS ${PULSE_INCLUDE_DIRS})
  endif()
endif()

LINK_DIRECTORIES(
	${CMAKE_SOURCE_DIRECTORY}
)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/include
)

ADD_SUBDIRECTORY(src)